css/style.css
/* ... */
@media (min-width: 992px) {
    body {
        padding-top: 0;
        /* padding-left: 17rem; */
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Saira Extra Condensed', serif;
    font-weight: 700;
    text-transform: uppercase;
    /* color: #343a40; */
}

.alter{
  color : #acb3b9
}

h1 {
    font-size: 6rem;
    line-height: 5.5rem;
}

h2 {
    font-size: 3.5rem;
}

a {
    color: #2196f3;
}

a:hover,
a:focus,
a:active {
    color: #0f72c1;
}

.subheading {
    text-transform: uppercase;
    font-weight: 500;
    font-family: 'Saira Extra Condensed', serif;
    font-size: 1.35rem;
}

/*==================================================
                  SOCIAL-ICON
====================================================*/
  .list-social-icons a {
      color: #495057;
  }

  .list-social-icons a:hover {
      color: #2196f3;
  }

  .list-social-icons a .fa-lg {
      font-size: 1.75rem;
  }

  .list-icons {
      font-size: 3rem;
  }

  .list-icons .list-inline-item i:hover {
      color: #2196f3;
  }

  .my-auto{
      /* margin : 0 auto; */
  }

/*==================================================
                    NAV-BAR
====================================================*/
  #sideNav .navbar-nav .nav-item .nav-link {
      font-weight: 600;
      text-transform: uppercase;
      font-size : 1.2rem;
  }
  .only-screen {
      display : none
  }
  
  .misc-item{
    
    text-transform: uppercase;
    margin-bottom: 10%;
    padding : 2%;
    border : 2px solid rgba(255,255,255,.5);
}

  @media (min-width: 1024px) {
      #sideNav {
          padding : 0;
          text-align: center;
          position: sticky;
          float: left;
          border: 12px solid #f5f5f5;
          border-radius: 20px;
          top: 0;
          left: 0;
          display: flex;
          flex-direction: column;
          width: 20rem;
          height: 100vh;
      }
      #sideNav .navbar-brand {
          display: flex;
          margin: auto auto 0;
          padding: 0.5rem;
      }
      #sideNav .navbar-brand .img-profile {
          max-width: 10rem;
          max-height: 10rem;
          border: 0.5rem solid rgba(255, 255, 255, 0.2) ;
      }
      #sideNav .navbar-collapse {
          display: flex;
          align-items: flex-start;
          flex-grow: 0;
          width: 100%;
          margin-bottom: auto;
      }
      #sideNav .navbar-collapse .navbar-nav {
          flex-direction: column;
          width: 100%;
      }
      #sideNav .navbar-collapse .navbar-nav .nav-item {
          display: block;
      }
      #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
          display: block;
      }
      .only-mob {
          display : none !important
      }
      .only-screen {
          display : inline !important
      }
  }

/*==================================================
                  BUTTON (Generic)
====================================================*/

.btn-general {
    background-color: transparent;
    text-align: center;
    border-width: 1px;
    border-radius: 0px;
    font-size: 16px;
    padding: 10px 15px;
    font-weight: 400;
    text-transform: uppercase;
}

.btn-white {
    border-color: #1e152a;
    background-color: #1e152a;
    color: #fff;
}

.btn-white:hover,
.btn-white:focus {
    background-color: transparent;
    color: #1e152a;
    cursor: pointer;
}

.btn-green {
    border-color: #1e152a;
    color: #1e152a;
}

.btn-green:hover,
.btn-green:focus {
    background-color: #1e152a;
    color: #fff;
    cursor: pointer;
}

/*==================================================
                  SECTION (Generic)
====================================================*/
  .heading-border {
      width: 60px;
      height: 10px;
      background-color:#1e152a !important;
      margin: 0 auto 20px auto;
  }

  section.resume-section {
      border-bottom: 1px solid #1e152a;
      padding-top: 5rem !important;
      padding-bottom: 5rem !important;
      color:#1e152a;
  }

  section.resume-section .resume-item .resume-date {
      min-width: none;
  }

  section.resume-section p{
      font-weight : 600;
  }

  .resume-item li {
      line-height: 1.7;
  }

  @media (min-width: 768px) {
      section.resume-section {
          min-height: 100vh;
      }
      section.resume-section .resume-item .resume-date {
          min-width: 18rem;
      }
      .main-holder{
        padding-left:30rem;
      }
  }

  @media (min-width: 1024px) {
    .main-holder{
      padding-left:20rem !important;
    }
      section.resume-section {
          padding-top: 3rem !important;
          padding-bottom: 3rem !important;
      }
  }

  .bg-primary {
      background-color: #1e152a !important;
  }

  .text-primary {
      color: #1e152a !important;
  }

/*==================================================
                      ABOUT
====================================================*/
  #about {
      /* background-image: url(../img/profile-banner.jpg); */
      background-size: cover;
      background-position: center center;
      background-repeat: no-repeat;
  }

  #about .img-profile{
    width:200px;
    height:auto;
    background-color:grey;
    border-radius: 50%;
    box-shadow: 1px 1px 15px 7px #1e152a;
    margin : 5%;
    margin-bottom:2rem;
  }

  @media (min-width:767px){
      .img-profile{
          width :300px!important;
      }
  }

  #about h1 {
    /*font-size: 100%;*/
  }


/*==================================================
                    EXPERIENCE
====================================================*/
  #experience {
    /* background: #6E7E85; */
  }

  #experience .card {
    background-color: #1E152A;
    color: #d0c9dc !important;
    border-color : #066d9a;
    box-shadow: 3px 7px 6px 1px #43276a;
  }

  #experience .card h3{
    color : #eae9ec;
  }
/* ... */

